// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "ðə kɪg siːz ðə wʊlf",
    },
    {
      "english": "the dogs see the wolves",
      "target": "ðə bɔːgs siː ðə wʊlfs",
    },
    {
      "english": "i give you the bread",
      "target": "aj gɪvɪŋ ju",
    },
    {
      "english": "the king walks at the river",
      "target": "ðə kɪg wɔːkɪŋz æθ ðə rɪvər",
    },
    {
      "english": "the king does not see the wolf",
      "target": "ðə kɪg nat siːz ðə wʊlf",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "rege wideret lupuum",
    },
    {
      "english": "the dogs see the wolves",
      "target": "kakane widerent lulupuum",
    },
    {
      "english": "i give you the bread",
      "target": "ego dareo tuum",
    },
    {
      "english": "the king walks at the river",
      "target": "rege ambularet hlume",
    },
    {
      "english": "the king does not see the wolf",
      "target": "rege non wideret lupuum",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "nymynymy lukɯn hojolɯ",
    },
    {
      "english": "the dogs see the wolves",
      "target": "hohojolɯ lukɯn hohojolɯ",
    },
    {
      "english": "i give you the bread",
      "target": "mi kana sinæ",
    },
    {
      "english": "the king walks at the river",
      "target": "nymynymy kajatiwæ haʔkɯ telehuno",
    },
    {
      "english": "the king does not see the wolf",
      "target": "nymynymy ala lukɯn hojolɯ",
    },
  ],
  "preset": "tokipona",
}
`;
